Changes in 5.1.3 (unreleased)
- NFORenum specific changes:
  - Data file updates
    - Action 0 train property 2B.
    - Action 0 road vehicle properties 22 and 23.
    - Action 0 ship properties 1D.
    - Action 0 aircraft property 1C.
    - Action 0 railtype property 1B.
    - Action 2 callback 15E.
    - Action 2 vehicle variable 4B.
    - Action 8 GRF version 8.
    - Action D patch variable 14.
  - Support for font size 3 (monospaced font).

Changes in 5.1.2 (2011-10-07)
- NFORenum specific changes:
  - Data file updates
    - Action 3 canals ID 8.
    - Action 5 type 15 takes 0xA2 sprites.
    - Action 5 types 84, 85, 86, 88, 89, 8A, 8B, 8F, 90, 91, 92 and 93
  - Support the advanced sprite layout in action2.
  - Fix action 14 palette checking on BE machines.
  - Disable warning 209 when checking action 0 raw ('l') data.

Changes in 5.1.1 (2011-03-19)
- GRFCodec specific changes:
  - Make PNG the default output sprite sheet format if libpng is found.
- NFORenum specific changes:
  - Data file updates
    - Action 0 rail types properties 17..1A.
    - Action 4 language ID 0x12 (Faroese).
    - Action 2 station variable 67 is dword sized.
  - Add support for variable 7B.
  - Warn if the palette is not specified via an Action 14.

Changes in 5.1.0 (2010-12-10)
- Add support for PNG formatted sprite sheets with both encoding and decoding (requires libpng).
- NFORenum specific changes:
  - Data file updates
    - Action 0 road vehicle property 21.
    - Action 0 ship property 1C.
    - Action 0 cargo properties 1B, 1C.
    - Action 0 general variable properties 13..15.
    - Action 0 object property 17.
    - Action 2 object variables 43, 47, 48.
    - Callback 10 works for road vehicles and ships as well.
  - Add support for string code 9A 0D..9A 15.
  - Change format of some warning messages to provide more information.
  - Fix stack validator triggering a (wrong) assert